--- a/app.json
+++ b/app.json
@@ -31,7 +31,7 @@
         "CHANNELS": {
             "description": "Username or ID of channel or group. Separate multiple IDs by space",
             "value": "",
-            "required": true
+            "required": false
         },
         "COLLECTION_NAME": {
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
